--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,25 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
-    <%= yield %>
-  </body>
-</html>
+  debugger
+    <%= render partial: "shared/navbar" %>
+
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-md-6 offset-md-3">
+          <% if notice.present? %>
+            <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+          <% end %>
+
+          <% if alert.present? %>
+            <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+          <% end %>
+        </div>
+      </div>
+      <%= yield %>
+    </body>
+  </html>
