--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: company) do |form| %>
-  <% if company.errors.any? %>
+<%= form_with(model: @company) do |form| %>
+  <% if @company && @company.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(company.errors.count, "error") %> prohibited this company from being saved:</h2>
+      <h2><%= pluralize(@company.errors.count, "error") %> prohibited this company from being saved:</h2>
 
       <ul>
-        <% company.errors.each do |error| %>
+        <% @company.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
