--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,14 +1,41 @@
-<p style="color: green"><%= notice %></p>
+<div class="container">
+  <p style="color: green; text-align: center;"><%= notice %></p>
+  
+  <div class="row">
+    <div class="col-md-12 text-center p-3">
+      <h2>Where do you work?</h2>
+    </div>
+  </div>
 
-<h1>Companies</h1>
+  <div class="row justify-content-center">
+    <div id="companies">
+      <div class="container">
+        <% @companies.each do |company| %>
+          <div class="col-md-4">
+            <div class="card mb-3 position-relative">
+              <div class="card-body d-flex align-items-center">
+                <div class="avatar">
+                  <img src="company_logo.jpg" class="card-img-top" alt="Company Logo">
+                </div>
+                <div class="company-info">
+                  <h4 class="card-title"><%= company.name %></h4>
+                  <h6 class="card-subtitle text-muted">Cutting edge technology, top notch talent.</h6>
+                </div>
+              </div>
+                <div class="d-grid col-6 p-2">
+                  <%= link_to "I work here", new_employee_registration_path(company_id: company.id), class: "btn btn-outline-success btn-sm" %>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
 
-<div id="companies">
-  <% @companies.each do |company| %>
-    <%= render company %>
-    <p>
-      <%= link_to "Show this company", company %>
-    </p>
-  <% end %>
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <%= button_to "I don't see my company listed", new_company_path(company: @company), class: "btn btn-secondary" %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New company", new_company_path %>
