--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,20 +1,16 @@
-<%= form_with(model: employee) do |form| %>
-  <% if employee.errors.any? %>
+<%= form_with(model: @employee) do |form| %>
+
+  <% if @employee && @employee.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
+      <h2><%= pluralize(@employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
 
       <ul>
-        <% employee.errors.each do |error| %>
+        <% @employee.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :employee_id, style: "display: block" %>
-    <%= form.number_field :employee_id %>
-  </div>
 
   <div>
     <%= form.label :email, style: "display: block" %>
