--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary fixed-top">
+<nav class="navbar bg-body-tertiary sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><%= @name %></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -13,25 +13,26 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/employees/2">Dashboard</a>
-            <%= link_to "Dashboard", @employee, class: "nav-link active" %>
+            <%= link_to @employee, class: "nav-link active" do %>
+              <i class="fas fa-chart-line"></i> Dashboard
+            <% end %>
           </li>
+          <% if @employee && employee_signed_in? %>
+          <li class="nav-item">
+            <%= button_to "Profile", edit_employee_path(@employee), class: "btn btn-info p-2" %> 
+            </li>
+            <li class="nav-item">
+              <%= button_to "Sign Out", destroy_employee_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-dark p-2" %>
+            </li>
+          <% else %>
             <li class="nav-item">
               <%= button_to "Sign In", new_employee_session_path, class: "btn btn-outline-success p-2" %>
-              </li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <%= button_to "Sign Up", new_employee_registration_path, class: "btn btn-success p-2" %>
-              </li>
-            </ul>
-          </li>
+            </li>
+          <% end %>
         </ul>
-        <form class="d-flex mt-3" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </div>
