--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,21 +1,29 @@
-<div id="<%= dom_id employee %>">
-
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="card">
-          <div class="card-body text-center">
-            <img src="<%= @employee.profile_picture %>" alt="Profile Picture" class="rounded-circle mb-3" style="width: 100px; height: 100px;">
-            <h2 class="card-title mb-3">Welcome, <%= @employee.first_name %>!</h2>
-            <p class="card-text text-muted"><%= @employee.time_zone %></p>
-            <p class="card-text"><%= @employee.role.capitalize %></p>
-            <% if @employee.manager %>
-              <p class="card-text">Manager: <%= @employee.manager.full_name %></p>
+<div id="<%= dom_id(employee) %>">
+  <div class="row">
+    <div class="col">
+      <div class="card">
+        <div class="card-body text-center">
+          <div class="media">
+            <%= image_tag employee.profile_picture, alt: "Profile Picture", class: "rounded-circle mb-3", width: 100, height: 100 %>
+          </div>
+          <div class="media-body">
+            <h2 class="card-title mb-3">
+              Welcome, <%= employee.first_name %>!
+            </h2>
+            <p class="card-text text-muted">
+              <%= employee.time_zone %>
+            </p>
+            <p class="card-text">
+              <%= employee.role.capitalize %>
+            </p>
+            <% if @employee.manager? %>
+              <p class="card-text">
+                Manager: <%= employee.manager.full_name %>
+              </p>
             <% end %>
           </div>
         </div>
       </div>
     </div>
   </div>
-
 </div>
