--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,6 @@
 <hr>
 <div class="container-lg text-center">
 
-  <%= button_to "Find your company", companies_path, method: :get, class: "btn btn-success" %>
+  <%= button_to "Find your company", new_company_path(@company), method: :get, class: "btn btn-success" %>
 
 </div>
