--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
             <%= button_to "Sign In", new_employee_session_path, class: "btn btn-outline-success p-2" %>
           </li>
           <li class="nav-item">
-            <%= button_to "Sign Up", new_employee_registration_path, class: "btn btn-success p-2" %>
+            <%= button_to "Sign Up", registration_path, class: "btn btn-success p-2" %>
           </li>
         <% end %>
       </ul>
