--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @company) do |form| %>
+<%= form_with(model: @company, url: new_employee_registration_path(company_id: company.id)) do |form| %>
   <% if @company && @company.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(@company.errors.count, "error") %> prohibited this company from being saved:</h2>
