--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -23,7 +23,8 @@
                 </div>
               </div>
                 <div class="d-grid col-6 p-2">
-                  <%= link_to "I work here", new_employee_registration_path(company_id: company.id), class: "btn btn-outline-success btn-sm" %>
+      <%= link_to "I work here", new_employee_registration_path(company_id: company.id), class: "btn btn-outline-success btn-sm" %>
+
                 </div>
               </div>
             </div>
@@ -35,7 +36,8 @@
 
   <div class="row">
     <div class="col-md-12 text-center">
-      <%= button_to "I don't see my company listed", new_company_path(company: @company), class: "btn btn-secondary" %>
+<%= link_to "I don't see my company listed", new_company_path, class: "btn btn-secondary" %>
+
     </div>
   </div>
 </div>
