--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New company</h1>
+<h1>Add your company</h1>
+<h4 class="text-muted">Your co-workers will thank you.</h4>
 
 <%= render "form", company: @company %>
 
