--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -4,7 +4,7 @@
       <div class="card">
         <div class="card-body text-center">
           <div class="media">
-            <%= image_tag employee.profile_picture, alt: "Profile Picture", class: "rounded-circle mb-3", width: 100, height: 100 %>
+            <%= image_tag employee.profile_picture.present? ? employee.profile_picture : "https://www.vecteezy.com/vector-art/26619142-default-avatar-profile-icon-vector-of-social-media-user-photo-image", alt: "Profile Picture", class: "rounded-circle mb-3", width: 100, height: 100 %>
           </div>
           <div class="media-body">
             <h2 class="card-title mb-3">
@@ -16,7 +16,7 @@
             <p class="card-text">
               <%= employee.role.capitalize %>
             </p>
-            <% if @employee.manager? %>
+            <% if @employee.manager.present? %>
               <p class="card-text">
                 Manager: <%= employee.manager.full_name %>
               </p>
