--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container-lg text-center">
-  <h1> Timesheet SMS </h1>
+  <h1> archios </h1>
   <span class= "text-muted">Clock in with a quick text. </span>
 </div>
 <hr>
 <div class="container-lg text-center">
 
-  <%= button_to "Find your company", new_company_path(@company), method: :get, class: "btn btn-success" %>
+  <%= button_to "Find your company", companies_path(@company), method: :get, class: "btn btn-success" %>
 
 </div>
