--- a/app/views/timesheet_entries/_form.html.erb
+++ b/app/views/timesheet_entries/_form.html.erb
@@ -15,8 +15,8 @@
 <li id="<%= dom_id(timesheet_entry) %>_form" class="list-group-item">
   <%= form_with(model: timesheet_entry, remote: true ) do |form| %>
 
-    <%= form.hidden_field @timesheet_entry.employee.id %>
-    <%= form.hidden_field @timesheet_entry.pay_period.id %>
+    <%= form.hidden_field timesheet_entry.employee.id %>
+    <%= form.hidden_field timesheet_entry.pay_period.id %>
 
     <div class="mb-3">
       <%= form.label :started_at, class: "sr-only" %>
@@ -29,7 +29,7 @@
     </div>
     <div class="mb-3">
       <%= form.label "Comments" %>
-      <%= form.text_field :comment, class: "form-control" %>
+      <%= form.text_field :comments, class: "form-control" %>
     </div>
     <%= form.submit class: "btn btn-outline-secondary btn-block" %>
   </li>
