--- a/app/views/timesheet_entries/_form.html.erb
+++ b/app/views/timesheet_entries/_form.html.erb
@@ -14,23 +14,14 @@
 
 <li id="<%= dom_id(timesheet_entry) %>_form" class="list-group-item">
   <%= form_with(model: timesheet_entry, remote: true ) do |form| %>
-
-    <%= form.hidden_field timesheet_entry.employee.id %>
-    <%= form.hidden_field timesheet_entry.pay_period.id %>
-
+    <%= form.hidden_field :employee_id, value: timesheet_entry.employee&.id %>
+    <%= form.hidden_field :pay_period_id, value: PayPeriod.last&.id %>
     <div class="mb-3">
       <%= form.label :started_at, class: "sr-only" %>
       <%= form.datetime_local_field :started_at, class: "form-control" %>
-    </div>
-
-    <div class="mb-3">
       <%= form.label :ended_at, class: "sr-only" %>
       <%= form.datetime_local_field :ended_at, class: "form-control" %>
     </div>
-    <div class="mb-3">
-      <%= form.label "Comments" %>
-      <%= form.text_field :comments, class: "form-control" %>
-    </div>
-    <%= form.submit class: "btn btn-outline-secondary btn-block" %>
-  </li>
-<% end %>
+    ...
+  <% end %>
+</li>
