back ongit add . also, timesheet clock in/out fixed thumbsup

--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -9,7 +9,7 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-header">
-          Clock Status
+          Status
         </div>
         <div class="card-body">
 <% if @employee.timesheet_entries.any? %>
