--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -15,11 +15,10 @@
             <div class="card mb-3 position-relative">
               <div class="card-body d-flex align-items-center">
                 <div class="avatar">
-                  <img src="company_logo.jpg" class="card-img-top" alt="Company Logo">
+                  <img src="<%= company.logo %>" class="card-img-top" alt="Company Logo">
                 </div>
                 <div class="company-info">
-                  <h4 class="card-title"><%= company.name %></h4>
-                  <h6 class="card-subtitle text-muted">Cutting edge technology, top notch talent.</h6>
+                  <h4 class="card-title"><%# company.name %></h4>
                 </div>
               </div>
                 <div class="d-grid col-6 p-2">
